# GyroButton

./: .gitignore  .mxproject  CMakeLists.txt  GyroButton.ioc  Makefile  STM32Toolchain.cmake
Inc/: i2c.h  stm32f4xx_it.h
Src/: gpio.c  i2c.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
